# avicenne-pay-V2

./: .env  .env.example  .gitignore  CDC_appli.md  ECRANS, REGLES, WORKFLOW, ROLES.md  README.md  README2.md  TEMPLATE_Declaration_DA.xlsm  alembic.ini  create_admin.py  excel_to_constants.py  init_db.py  pyproject.toml  requirements.txt  write_init_migration.py  write_migration.py  write_migration_final.py
alembic/: env.py
alembic/versions/: 0001_init.py  06e170327118_add_contact_info_to_user.py  4268c3d89645_initial.py  eae27beaa10f_v3_hierarchy_and_students.py
app/: config.py  database.py  dependencies.py  init_db.py  main.py  services.py
app/common/: templates.py
app/models/: __init__.py  declaration.py  mission.py  student.py  sub_mission.py  user.py
app/routers/: admin.py  auth.py  declarations.py  missions.py  profile.py  users.py
app/schemas/: auth.py  constants.py  declaration.py  mission.py  user.py
app/services/: mail.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  dashboard.html  forgot_password.html  login.html  profile.html  reset_password_form.html  setup.html  user_permissions.html
app/templates/admin/: declaration_directe.html  invoice_pdf.html  missions_peda.html  referentiel_missions.html  stats.html  user_form.html  users.html
scripts/: bootstrap_admin.py  change_password.py  create_admin.py  fix_db.py  neon_cleanup.py  reset_admin_exceptmissions.py  reset_admin_full.py  reset_admin_pop.py  reset_admin_pop2.py  reset_db.py  seed_data.py  seed_missions.py  send_reminders.py  test_asyncpg.py
(+7 files in other folders)
